<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/background_landscape_day"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_icon"
            android:visibility="visible"
            android:layout_width="@dimen/_marginTop"
            android:layout_height="@dimen/_marginTop"
            android:layout_marginStart="128dp"
            android:layout_marginTop="108dp"
            app:layout_constraintEnd_toStartOf="@+id/textView_temperature"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_marginTop"
            android:text="@string/textView_locality"
            android:textSize="@dimen/textSize_textView_locality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_text_feelLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/textView_text_feelLike"
            android:textSize="@dimen/textSize_textView_text"
            app:layout_constraintEnd_toStartOf="@+id/textView_temperatureFeelLike"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_condition" />

        <TextView
            android:id="@+id/textView_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_marginTop"
            android:text="@string/textView_pressure"
            android:textSize="@dimen/textSize_textView_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_wind_dir" />

        <TextView
            android:id="@+id/textView_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wind_marginTop"
            android:text="@string/textView_wind_speed"
            app:layout_constraintEnd_toStartOf="@+id/textView_wind_dir"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_text_wind" />

        <TextView
            android:id="@+id/textView_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_condition"
            android:textSize="@dimen/textSize_textView_condition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_temperature" />

        <TextView
            android:id="@+id/textView_temperatureFeelLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/textView_temperatureSign"
            android:textSize="@dimen/textSize_textView_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView_text_feelLike"
            app:layout_constraintTop_toBottomOf="@+id/textView_condition" />

        <TextView
            android:id="@+id/textView_pressure_mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pressure_mm_marginTop"
            android:text="@string/textView_pressure_mm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_pressure" />

        <TextView
            android:id="@+id/textView_wind_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/wind_marginTop"
            android:text="@string/textView_wind_dir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/textView_text_wind" />

        <TextView
            android:id="@+id/textView_text_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/textView_text_wind"
            android:textSize="@dimen/textSize_textView_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_text_feelLike" />

        <TextView
            android:id="@+id/textView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_temperatureSign"
            android:textSize="@dimen/textSize_textView_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_locality" />

        <FrameLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>